--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Atlanta, GA, US"
   employer         :
   pubmed           : 
-  googlescholar    : 
+  googlescholar    : "YQRB5NoAAAAJ"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
