google scholar bug

--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Atlanta, GA, US"
   employer         :
   pubmed           : 
-  googlescholar    : "YQRB5NoAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=YQRB5NoAAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
