--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Karan Taneja"
   avatar           : "profile.png"
-  bio              : "Student and researcher. Interested in ML applied to Speech, Text and Vision"
+  bio              : "Researcher and student. Creating AI tools for education at Georgia Tech."
   location         : "Atlanta, GA, US"
   employer         :
   pubmed           : 
