--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Karan Taneja"
 title_separator          : "-"
 name                     : "Karan Taneja"
-description              : "First-year Computer Science Ph.D. Student at Georgia Tech"
+description              : " Computer Science Ph.D. Candidate at Georgia Tech"
 url                      : https://krntneja.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "KrnTneja/KrnTneja.github.io"
